proactor based API for storage module.

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 All files in this repository fall under the license specified in LICENSE
-As of now, the project is licensed under the AGPL but we're still working
+Right now, the project is licensed under the AGPL but we're still working
 on a different license and plan to relicense the project at a later date.
 
 You will need:
