Added build system guy to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,6 @@
+Jan Engelhardt (se7) <jengelh@medozas.de>
 Patrick Strateman (phantomcircuit)
 Denis Roio (jaromil)
-Amir Taaki (genjix)
+Amir Taaki (genjix) <genjix@riseup.net>
 
 and others.
