README: typo and omission

--- a/README
+++ b/README
@@ -5,8 +5,8 @@ on a different license and plan to relicense the project at a later date.
 You will need:
 
   - GCC 4.6 or newer
-  - Boost
-  - OpenSLL 0.9 or newer
+  - Boost 1.48 or newer
+  - OpenSSL 0.9 or newer
   * for PostgreSQL support:
     - cppdb (with postgres enabled)
   * for BerkeleyDB support:
