s/libbost-dev/libbost-all-dev/

--- a/INSTALL
+++ b/INSTALL
@@ -12,9 +12,9 @@ without warranty of any kind.
 Ubuntu Instructions
 ===================
 
-*Ubuntu Precise Pangolin requires libboost1.48-all-dev instead of libboost-dev
+*Ubuntu Precise Pangolin requires libboost1.48-all-dev instead of libboost-all-dev
 
-  $ sudo apt-get install build-essential autoconf libtool libboost-dev libdb++-dev libprotobuf-dev pkg-config libcurl4-openssl-dev
+  $ sudo apt-get install build-essential autoconf libtool libboost-all-dev libdb++-dev libprotobuf-dev pkg-config libcurl4-openssl-dev
   $ autoreconf -i
   $ ./configure --enable-bdb
   $ make
