updated install instructions.

--- a/INSTALL
+++ b/INSTALL
@@ -14,9 +14,9 @@ Ubuntu Instructions
 
 *Ubuntu Precise Pangolin requires libboost1.48-all-dev instead of libboost-all-dev
 
-  $ sudo apt-get install build-essential autoconf libtool libboost-all-dev libdb++-dev libprotobuf-dev pkg-config libcurl4-openssl-dev
+  $ sudo apt-get install build-essential autoconf libtool libboost-all-dev libdb++-dev libprotobuf-dev pkg-config libcurl4-openssl-dev libleveldb-dev
   $ autoreconf -i
-  $ ./configure --enable-bdb
+  $ ./configure --enable-bdb --enable-leveldb
   $ make
   $ sudo make install
 
