--- a/README
+++ b/README
@@ -67,8 +67,8 @@ Mac OSX Instructions
 ====================
 
 To build on Mac OSX, you will need to download and compile your own boost,
-leveldb and protobuf using gcc 4.7 before building libbitcoin. Then set the
-following environment variables before running the build process.
+leveldb using gcc 4.7 before building libbitcoin. Then set the following
+environment variables before running the build process.
 
   CC=/usr/local/bin/gcc-4.7
   CXX=/usr/local/bin/g++-4.7
