--- a/examples/README
+++ b/examples/README
@@ -1,8 +1,8 @@
 Run these commands to start the fullnode after installing libbitcoin:
 
   $ make
-  $ mkdir database
-  $ ./initchain database
+  $ mkdir blockchain
+  $ ./initchain blockchain
   $ screen -S fullnode
   $ ./fullnode
   ... press CTRL-A, D
