[debian] Fix some lintian warnings
binary-control-field-duplicates-source
build-depends-on-build-essential
missing-debian-source-format
missing-field-in-dep5-copyright
out-of-date-standards-version
package-lacks-versioned-build-depends-on-debhelper
source-nmu-has-incorrect-version-number
unused-license-paragraph-in-dep5-copyright
unversioned-copyright-format-uri
using-first-person-in-description

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-libbitcoin (1.0.10-1) unstable; urgency=low
+libbitcoin (1.0.10-1+nmu1) unstable; urgency=low
 
   * Initial release.
   Closes: bug#670701
