--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
-libbitcoin (1.0.10+nmu1) unstable; urgency=low
+libbitcoin0 (1.0.10+nmu1) unstable; urgency=low
 
   * Non-maintainer upload.
   * Initial release.
   Closes: bug#670701
 
- -- Pablo Castellano (Debian packages) <pablo@anche.no>  Sun, 01 Sep 2013 00:04:44 +0200
+ -- Pablo Castellano (Debian packages) <pablo@anche.no>  Sun, 15 Sep 2013 14:57:44 +0200
