I had to install automake on ubuntu for autoreconf -i to work

--- a/README
+++ b/README
@@ -12,7 +12,7 @@ Debian/Ubuntu Instructions
 > Start Here! <
   ^^^^^^^^^^^
 
-  $ sudo apt-get install build-essential autoconf libtool libboost-all-dev pkg-config libcurl4-openssl-dev libleveldb-dev
+  $ sudo apt-get install build-essential autoconf automake libtool libboost-all-dev pkg-config libcurl4-openssl-dev libleveldb-dev
   $ autoreconf -i
   $ ./configure --enable-leveldb
   $ make
