Added myself to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -21,3 +21,4 @@ Jan Engelhardt (se7) <jengelh@medozas.de>
 Aaron Williamson (SFLC) and Richard Stallman (FSF) for the license,
 Luke Dashjr for pointing out OpenSSL license conflict.
 
+Pablo Castellano - Debian packaging
