update installation instructions

--- a/INSTALL
+++ b/INSTALL
@@ -17,6 +17,18 @@ Debian/Ubuntu Instructions
 > Start Here! <
   ^^^^^^^^^^^
 
+You will need libsecp256k1:
+
+  $ git clone https://github.com/bitcoin/secp256k1.git
+  $ cd secp256k1
+  $ autoreconf -i
+  $ ./configure --prefix $INSTALL_PREFIX
+  $ make
+  $ make install
+  $ ldconfig
+
+Then install libbitcoin:
+
   $ sudo apt-get install build-essential autoconf libtool libboost-all-dev pkg-config libcurl4-openssl-dev libleveldb-dev
   $ autoreconf -i
   $ ./configure --enable-leveldb
